--- a/.gitignore
+++ b/.gitignore
@@ -182,6 +182,8 @@ fabric.properties
 .idea/caches/build_file_checksums.ser
 
 new_git.bat
+twilio_credentials.json
+location_info.json
 
 # idea folder, uncomment if you don't need it
 # .idea
